# design_patterns

./: README.md  pyproject.toml
adapter/simple_adapter/: README.md  adapter.py  context_manager_adapter.py
decorator/: README.md  decorator.py
iterator_pattern/: README.md  iterator_pattern.py
strategy_pattern/: README.md  strategy_pattern.py
template_method/: README.md  template_method.py
