[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Jonathan Howarth <jonathan.michael.howarth@gmail.com>"]
readme = "README.md"
packages = [{include = "design_patterns"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
